renewal frontend with npm and webpack
* remove asset_pipeline and rails-assets
* add npm and webpack

--- a/app.json
+++ b/app.json
@@ -8,5 +8,13 @@
   "addons":[
     "memcachier",
     "mongolab"
+  ],
+  "buildpacks": [
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-ruby"
+    },
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
+    }
   ]
 }
