use buildpack-webpack
* add buildpack-webpack into app.json
* run thin web server directly in Procfile

--- a/app.json
+++ b/app.json
@@ -10,11 +10,8 @@
     "mongolab"
   ],
   "buildpacks": [
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-ruby"
-    },
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
-    }
+    {"url": "https://github.com/heroku/heroku-buildpack-ruby"},
+    {"url": "https://github.com/heroku/heroku-buildpack-nodejs"},
+    {"url": "https://github.com/tdtds/heroku-buildpack-webpack"}
   ]
 }
